bk_ida/gccida/c1/mark_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_reg/src/flow.c:1388:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = ( ( unsigned int)( mode_class_0[v3] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mark_reg/src/obj/flow.o] Error 1
